Addition of further edit options to the tiny mce editor including adding links.  Change to CSS to help with H1 layout issue.  Changes to ShibLogin page so it will become a landing / error page in the future.

--- a/Website/SourceCode/Profiles/Profiles/Framework/CSS/profiles.css
+++ b/Website/SourceCode/Profiles/Profiles/Framework/CSS/profiles.css
@@ -268,7 +268,6 @@ form
 .profiles, .profiles td, .profiles th, .profiles textarea, .profiles select, .profiles h2, .profiles h3, .profiles h4, .profiles h5, .profiles h6, .profiles ul, .profiles ol
 {
 	font-size: 13px;
-	line-height: 16px;
 }
 .profiles ul, .profiles ol
 {
